--- a/admin-app/src/app/member-detail/member-detail.component.html
+++ b/admin-app/src/app/member-detail/member-detail.component.html
@@ -7,4 +7,6 @@
       <input type="text" [(ngModel)]="member.name" placeholder="名前" />
     </label>
   </div>
+  <button (click)="goBack()">戻る</button>
+  <button (click)="save()">保存</button>
 </div>
