--- a/angular-chat/src/app/login/login.component.html
+++ b/angular-chat/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <form #form="ngForm" (ngSubmit)="signup(form)">
-    <h2 class="heading text-center">アカウントを作成</h2>
+  <form #form="ngForm" (ngSubmit)="login(form)">
+    <h2 class="heading text-center">ログイン</h2>
     <div class="form-group">
       <input
         ngModel
@@ -22,9 +22,9 @@
         required
       />
     </div>
-    <button class="btn btn-lg btn-primary" type="submit">新規登録</button>
+    <button class="btn btn-lg btn-primary" type="submit">ログイン</button>
   </form>
   <div class="note">
-    <a routerLink="/login" class="signup-link">ログインはこちら</a>
+    <a routerLink="/signup">アカウントを新規作成</a>
   </div>
 </div>
